@@ -1,3 +1,5 @@
+HEAD
+	+ Return the identifier in EBox::DNS::addDomain method
 3.5.1
 	+ Workaround in pageTitle() method against losing of directory parameter/attribute
 3.5
